adds Swagger docs and updates README.md

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A service build in Node.js to get and list the most popular repositories from GitHub",
   "main": "index.js",
   "scripts": {
-    "test": "lab tests/repositoriesController.test.js -m 5000 -t 95 -L",
+    "test": "lab tests/repositoriesController.test.js -m 5000 -t 95 -L -I 'core,__core-js_shared__'",
     "start": "node server"
   },
   "repository": {
@@ -19,9 +19,12 @@
   "homepage": "https://github.com/JenyMzo/popular-repositories#readme",
   "dependencies": {
     "@hapi/hapi": "^19.1.1",
+    "@hapi/inert": "^6.0.1",
     "@hapi/joi": "^17.1.1",
     "@hapi/joi-date": "^2.0.1",
-    "got": "^11.1.4"
+    "@hapi/vision": "^6.0.0",
+    "got": "^11.1.4",
+    "hapi-swagger": "^13.0.1"
   },
   "devDependencies": {
     "@hapi/code": "^8.0.1",
